# rangel_bibliotecas

./: .gitignore  .pypirc  LICENSE.txt  README.ipynb  README.md  setup.cfg  setup.py
rangel/: __init__.py  arquivo.py  arquivos.py  csv.py  data_hora.py  db_sqlite.py  dicionario.py  executar.py  medidas.py  mysqli.py  robo.py  salvar_abas.py  shell_style.py  tabela.py  texto.py  verificar_py.py
