[metadata]
description-file = README.md
license_file = LICENSE.txt
name = example-package-YOUR-USERNAME-HERE
version = 0.3.9
author = Clemilton da Costa
author_email = clemas.web@gmail.com
description = Várias Bibliotecas pra faciliar o dia a dia
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Clemilton10/rangel_bibliotecas
project_urls =
    Bug Tracker = https://github.com/Clemilton10/rangel_bibliotecas
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src